--- a/Pathy.Specs/Pathy.Specs.csproj
+++ b/Pathy.Specs/Pathy.Specs.csproj
@@ -33,7 +33,7 @@
       </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\PathWeaver\PathWeaver.csproj" />
+      <ProjectReference Include="..\Pathy\Pathy.csproj" />
     </ItemGroup>
 
 
