--- a/Pathy.Specs/Pathy.Specs.csproj
+++ b/Pathy.Specs/Pathy.Specs.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net6.0;net472</TargetFrameworks>
+        <TargetFrameworks>net8.0;net472</TargetFrameworks>
         <LangVersion>default</LangVersion>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
         <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
@@ -15,7 +15,7 @@
       </PackageReference>
     </ItemGroup>
 
-    <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+    <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
       <PackageReference Include="xunit.runner.visualstudio" Version="3.0.0">
         <PrivateAssets>all</PrivateAssets>
@@ -33,6 +33,7 @@
       </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Pathy.Globbing\Pathy.Globbing.csproj" />
       <ProjectReference Include="..\Pathy\Pathy.csproj" />
     </ItemGroup>
 
