--- a/Pathy.Globbing/Pathy.props
+++ b/Pathy.Globbing/Pathy.props
@@ -2,7 +2,7 @@
 <Project>
   <ItemGroup>
     <Compile Update="@(Compile)">
-      <Visible Condition="'%(NuGetItemType)' == 'Compile' and '%(NuGetPackageId)' == 'Pathy'">false</Visible>
+      <Visible Condition="'%(NuGetItemType)' == 'Compile' and '%(NuGetPackageId)' == 'Pathy.Globbing'">false</Visible>
     </Compile>
   </ItemGroup>
 </Project>
