--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,7 @@ jobs:
       run: ./build.ps1
       env:
         NuGetApiKey: ${{ secrets.NUGETAPIKEY }}
+        GitHubApiKey: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Check for 'lcov.info' existence
       id: check_files
