--- a/Pathy.Globbing/Pathy.Globbing.csproj
+++ b/Pathy.Globbing/Pathy.Globbing.csproj
@@ -7,7 +7,7 @@
         <ImplicitUsings>disable</ImplicitUsings>
         <NuSpecFile>.nuspec</NuSpecFile>
         <NuspecProperties>version=$(Version)</NuspecProperties>
-        <DefineConstants>MYPACKAGE_COMPILE</DefineConstants>
+        <DefineConstants>PATHY_PUBLIC</DefineConstants>
         <NoWarn>1591;1573</NoWarn>
         <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
         <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
