--- a/Pathy.Globbing/Pathy.Globbing.props
+++ b/Pathy.Globbing/Pathy.Globbing.props
@@ -2,6 +2,7 @@
 <Project>
   <ItemGroup>
     <Compile Update="@(Compile)">
+      <Visible Condition="'%(NuGetItemType)' == 'Compile' and '%(NuGetPackageId)' == 'Pathy.Globbing'">false</Visible>
     </Compile>
   </ItemGroup>
 </Project>
